--- a/sudoku-server/Cargo.toml
+++ b/sudoku-server/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-sudoku-lib = { path = "../sudoku-lib" }
+sudoku-solver = { path = "../sudoku-solver" }
 
 rocket = { git = "https://github.com/SergioBenitez/Rocket.git" }
 rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket.git" }
