--- a/sudoku-solver/Cargo.toml
+++ b/sudoku-solver/Cargo.toml
@@ -7,7 +7,9 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
 log = "0.4"
+serde = { version = "1", optional = true, features = ["derive"] }
 thiserror = "1"
 
 [dev-dependencies]
 env_logger = "0.9"
+serde_json = "1"
